--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "react-native start",
     "test": "jest"
   },
+  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "date-fns": "^2.9.0",
     "expo": "~36.0.0",
     "expo-haptics": "^8.0.0",
     "react": "~16.9.0",
