--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "color": "^3.1.2",
     "date-fns": "^2.9.0",
     "expo": "~36.0.0",
     "expo-haptics": "^8.0.0",
@@ -18,7 +19,8 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "~0.7.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-webview": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "~7.6.0",
