--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "@react-native-community/async-storage": "next",
+    "@react-native-community/async-storage-backend-legacy": "next",
     "color": "^3.1.2",
     "date-fns": "^2.9.0",
     "expo": "~36.0.0",
