--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "date-fns": "^2.9.0",
     "expo": "~36.0.0",
     "expo-haptics": "^8.0.0",
+    "expo-secure-store": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-calendars": "^1.259.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
