--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-shake": "^3.4.0",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^8.0.4",
