--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
+    "react-native-appearance": "^0.3.2",
     "react-native-calendars": "^1.259.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
