--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
-project.xcworkspace
 
 # Android/IntelliJ
 #
@@ -40,6 +39,7 @@ yarn-error.log
 buck-out/
 \.buckd/
 *.keystore
+!debug.keystore
 
 # fastlane
 #
@@ -55,7 +55,8 @@ buck-out/
 # Bundle artifact
 *.jsbundle
 
-/ios/
-/android/
+# CocoaPods
+/ios/Pods/
 
+/android/
 *secrets*
