--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,7 +42,24 @@ target 'temporal' do
   pod 'RNScreens', :path => '../node_modules/react-native-screens'
 
   # Automatically detect installed unimodules
-  use_unimodules!
+  use_unimodules!(exclude: [
+    'expo-keep-awake',
+    'expo-face-detector',
+    'expo-constants',
+    'expo-permissions',
+    'expo-sqlite',
+    'expo-app-loader-provider',
+    'expo-location',
+    'expo-linear-gradient',
+    'expo-error-recovery',
+    'expo-web-browser',
+    'unimodules-barcode-scanner-interface',
+    'unimodules-camera-interface',
+    'unimodules-constants-interface',
+    'unimodules-face-detector-interface',
+    'unimodules-sensors-interface',
+    'unimodules-task-manager-interface'
+  ])
   # use_frameworks!
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
   # pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
