--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "jetify"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^2.0.0-rc.1",
+    "@react-native-community/async-storage": "^2.0.0-rc.2",
     "@react-native-community/async-storage-backend-legacy": "next",
     "@react-native-mapbox-gl/maps": "^7.2.0",
     "color": "^3.1.2",
@@ -20,15 +20,15 @@
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
     "react-native-appearance": "^0.3.2",
-    "react-native-calendars": "^1.259.0",
-    "react-native-gesture-handler": "~1.5.0",
+    "react-native-calendars": "^1.261.0",
+    "react-native-gesture-handler": "^1.5.6",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-shake": "^3.4.0",
     "react-native-unimodules": "~0.7.0",
     "react-native-web": "~0.11.7",
-    "react-native-webview": "^8.0.4",
+    "react-native-webview": "^8.0.6",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
