--- a/ios/Podfile
+++ b/ios/Podfile
@@ -72,4 +72,6 @@ target 'temporal' do
   pod 'react-native-mapbox-gl', :path => '../node_modules/@react-native-mapbox-gl/maps'
 
 
+  pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
+
 end
