--- a/ios/Podfile
+++ b/ios/Podfile
@@ -74,4 +74,6 @@ target 'temporal' do
 
   pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
 end
