--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-appearance": "^0.3.2",
     "react-native-calendars": "^1.261.0",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "^0.6.4",
     "react-native-screens": "2.0.0-alpha.12",
